<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/ingresar_alimento"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCalorias"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="0sp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ingresa_las_calorias"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etCarbos"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="0sp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ingrese_los_carbohidratos"
        android:inputType="numberDecimal"
        android:minHeight="48sp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGrasas" />

    <EditText
        android:id="@+id/etProteinas"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="0sp"
        android:layout_marginBottom="412dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ingrese_las_proteinas"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCalorias" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="0sp"
        android:autofillHints="name"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/ingresa_el_nombre_del_alimento"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/etGrasas"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="0sp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ingrese_las_grasas"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProteinas" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="186dp"
        android:onClick="ingresarAlimento"
        android:text="Ingresar alimento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>